Project feature updated
* webpack mix file updated
* Unnecessary files are deleted
* Worked on demo domain [Product]
* Default theme layout updated

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -87,6 +87,18 @@
     "/assets/fonts/summernote.woff": "/assets/fonts/summernote.woff",
     "/assets/css/app.min.css": "/assets/css/app.min.css",
     "/assets/css/icons.min.css": "/assets/css/icons.min.css",
+    "/assets/images/favicon.ico": "/assets/images/favicon.ico",
+    "/assets/images/favicon64x64.png": "/assets/images/favicon64x64.png",
+    "/assets/images/flags/bangladesh.jpg": "/assets/images/flags/bangladesh.jpg",
+    "/assets/images/flags/french.jpg": "/assets/images/flags/french.jpg",
+    "/assets/images/flags/germany.jpg": "/assets/images/flags/germany.jpg",
+    "/assets/images/flags/italy.jpg": "/assets/images/flags/italy.jpg",
+    "/assets/images/flags/russia.jpg": "/assets/images/flags/russia.jpg",
+    "/assets/images/flags/spain.jpg": "/assets/images/flags/spain.jpg",
+    "/assets/images/flags/us.jpg": "/assets/images/flags/us.jpg",
+    "/assets/images/logo.png": "/assets/images/logo.png",
+    "/assets/images/users/avatar-1.jpg": "/assets/images/users/avatar-1.jpg",
+    "/assets/images/users/avatar-2.jpg": "/assets/images/users/avatar-2.jpg",
     "/assets/js/app.js": "/assets/js/app.js",
     "/assets/js/app.min.js": "/assets/js/app.min.js",
     "/assets/js/module/product/product-form.min.js": "/assets/js/module/product/product-form.min.js"
